# bentley-ottmann

./: Cargo.toml  README.md
examples/: list_events.rs  rasterize.rs
src/: algorithm.rs  compare.rs  lib.rs  utils.rs
src/algorithm/: edge.rs  linked_list.rs  mod.rs  priority_queue.rs  sweep_line.rs  tests.rs
tests/: random.rs
