[package]
name = "bentley-ottmann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.7.6", default-features = false, features = ["compile-time-rng"] }
bytemuck = "1.10.0"
hashbrown = { version = "0.12.3", default-features = false }
slab = { version = "0.4.7", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
tracing = { version = "0.1.35", default-features = false }

[dependencies.geometry]
package = "chalkboard-geometry"
path = "../chalkboard/chalkboard-geometry"
default-features = false

[dev-dependencies]
tracing-subscriber = "0.3.15"