[package]
name = "bentley-ottmann"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.15", default-features = false }
tracing = { version = "0.1.35", default-features = false }

[dependencies.geometry]
package = "chalkboard-geometry"
path = "../chalkboard/chalkboard-geometry"
default-features = false

[dev-dependencies]
fastrand = "1.8.0"
image = { version = "0.24.3", default-features = false }
imageproc = { version = "0.23.0", features = ["display-window"] }
tracing-subscriber = "0.3.15"
